src/test/ui/inference/issue-72616.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-72616.rs:20:30
   |
LL |         if String::from("a") == "a".try_into().unwrap() {}
   |                              ^^ -------------- this method call resolves to `Result<T, <Self as TryInto<T>>::Error>`
   |                              |
   |                              cannot infer type
   |
   = note: multiple `impl`s satisfying `String: PartialEq<_>` found in the `alloc` crate:
           - impl PartialEq for String;
           - impl<'a, 'b> PartialEq<&'a str> for String;
           - impl<'a, 'b> PartialEq<Cow<'a, str>> for String;
           - impl<'a, 'b> PartialEq<str> for String;

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
